Revised the styling for disabled buttons to improve visibility by changing brightness filtering to opacity. Added a condition to disable the restart button when the game status is "Started," preventing unintended restarts.

--- a/src/components/Poker/GameController/GameController.css
+++ b/src/components/Poker/GameController/GameController.css
@@ -51,7 +51,6 @@
 }
 
 
-
 .GameControllerButton:hover:has(> button:disabled)
  {
   pointer-events: none;  /* Keine Hover-Effekte/Farbanpassung */
@@ -60,7 +59,7 @@
 
 
 .GameControllerButton button:disabled {
-  filter: grayscale(100%) brightness(1.4);
+  filter: grayscale(100%) opacity(20%);
   cursor: not-allowed;
 }
 
